--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -22,12 +22,7 @@
   opacity: 0.5;
 }
 .cookie-box {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
   text-align: center;
-  z-index: 9999;
   background-color: #474747;
   color: #fdfdfd;
   padding: 16px 32px;
@@ -44,4 +39,7 @@
 .button-accept:hover {
   background-color: #0dcaf0;
   color: #fff;
+}
+.description {
+  text-decoration: underline;
 }
