--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  width: 100%;
+  margin: 0px;
+  overflow-x: hidden;
+}
 #blog {
   height: 100vh;
+  width: 100%;
 }
