update fix review udacity

--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 58px;
+  height: 100%;
 }
 .blog-item {
   text-align: center;
@@ -34,23 +35,25 @@
   color: #f3bf3c;
   font-size: 1rem;
 }
-.blog-description p {
-  text-align: left;
-}
+
 .blog-description .blog-title {
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: #5058a9;
+  display: inline-block;
+  padding: 8px 16px;
+  background-color: #5058a9;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
 }
 .blog-description .blog-title:hover {
   color: #f3bf3c;
   transition: all ease 0.2s;
 }
 .blog-description p {
+  text-align: left;
   color: #5058a9;
   font-size: 0.9rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  max-width: 308px;
 }
 
 /* Content Blog Js */
@@ -149,21 +152,26 @@
   font-weight: bold;
   font-style: italic;
 }
-.blog-content-author-name .company {
-  text-decoration: underline;
-}
 
 /* responsive for mobile */
-@media (max-width: 667px) {
+@media (max-width: 768px) {
   .blog-container {
     grid-template-columns: repeat(1, 350px);
+    height: auto;
+    overflow-x: hidden;
   }
+
+  .blog-description p {
+    text-align: center;
+  }
+
   .blog-item {
     margin: 0;
   }
   .blog-post-content {
     grid-template-columns: 1fr;
-    padding: 5rem 2rem 2rem 2rem;
+    padding: 5rem 0.4rem 2rem 0.4rem;
+    overflow-x: hidden;
   }
 
   .blog-content-author {
@@ -186,6 +194,7 @@
   .blog-container {
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
+    height: auto;
   }
   .blog-post-content {
     padding: 5rem 3rem 3rem 3rem;
@@ -214,7 +223,7 @@
 /* Responsive for PC */
 @media (min-width: 1024px) and (max-width: 1366px) {
   .blog-container {
-    height: calc(100vh - 58px - 200px);
+    height: auto;
   }
   .blog-post-content {
     padding: 5rem 3rem 3rem 3rem;
