--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,9 +1,10 @@
 .footer {
   background-color: #f3f4f6;
-  height: 200px;
+  width: 100%;
+  margin: 0;
 }
 .container-footer {
-  padding: 30px 0 30px;
+  padding: 30px 0;
   text-align: center;
 }
 .social-icons-footer {
